# pytorch_trt_comparison

./: .gitignore  README.md
Pixel_aligned_VLM/: README.md
Pixel_aligned_VLM/Lseg/: Lseg_resnet_test.py  get_vis_enc.py  make_onnx_resnet.py  make_onnx_vit.py
Pixel_aligned_VLM/Lseg/modules/models/: lseg_net.py  lseg_vit.py
hw_clip/: CLIP_resnet_test.py  resnet_test.py
hw_clip/cpp_ver/: CMakeLists.txt  README.md  clip_trt.cpp
hw_clip/cpp_ver/engine_files/: convert_onnx_to_trt.sh
hw_clip/cpp_ver/include/: inference.h  logger.h
hw_clip/cpp_ver/src/: inference.cpp  main.cpp
